Fixing bugs on mobile version :bug:

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3109,8 +3109,8 @@
 		/* Main */
 
 			#main {
-				padding-left: 1em;
-				padding-right: 1em;
+				/* padding-left: 1em;
+				padding-right: 1em; */
 			}
 
 		/* Footer */
